fix: board overflow

--- a/src/assets/scss/_board-page.scss
+++ b/src/assets/scss/_board-page.scss
@@ -8,7 +8,7 @@
     margin-bottom: 20px;
     border-radius: 8px;
     border: 1px solid $color_border;
-    //overflow-x: auto;
+    overflow-x: hidden;
     background: url('../img/scrum2.png');
     background-position: right 10px bottom 10px;
     background-repeat: no-repeat;
